--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   background-color: gray;
 }
@@ -10,7 +16,13 @@ li img {
   max-width: 150px;
 }
 
+.character-selection {
+  display: flex;
+  justify-content: center;
+}
+
 .characters {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
+  column-gap: 5px;
 }
