each player has key press count

--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,10 @@ li img {
   cursor: pointer;
 }
 
+.prompt-directions-player2 {
+  cursor: pointer;
+}
+
 .stats {
   display: flex;
   justify-content: space-between;
