--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ h1 {
   margin: 40px 0 30px 0;
 }
 
-span {
+h1 span {
   text-transform: uppercase;
   font-family: "Tilt Prism", cursive;
   font-size: 100px;
@@ -65,7 +65,13 @@ li img {
   padding-left: 500px;
   padding-right: 500px;
   margin-bottom: 35px;
+}
+
+.choosen-player p {
+  display: flex;
+  justify-content: space-between;
   text-decoration: underline;
+  text-underline-offset: 10px;
 }
 
 .player-2 {
@@ -104,6 +110,20 @@ li img {
   padding-left: 70px;
   padding-right: 70px;
 }
+
+.prompt-directions,
+.prompt-ready,
+.prompt-directions-player2 {
+  font-family: "Ruwudu", serif;
+  font-size: 24px;
+  display: flex;
+  align-items: center;
+  max-height: 300px;
+  margin-top: 80px;
+  padding: 20px;
+  background-color: #999;
+}
+
 /* below is the event listener section */
 .prompt-ready {
   cursor: pointer;
