added space on bottom after netlify deployment

--- a/css/style.css
+++ b/css/style.css
@@ -110,6 +110,7 @@ li img {
   justify-content: space-between;
   padding-left: 70px;
   padding-right: 70px;
+  margin-bottom: 100px;
 }
 
 .player--1-damage {
